<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white"   >

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Email"
            android:textColor="@color/teal_700"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/providerTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="proveedor"
            android:textColor="@color/teal_700"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="Cerrar Sesion"/>


        <Button
            android:id="@+id/imagenButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Boton_siguiente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="372dp" />

        <Button
            android:id="@+id/imagenButton1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Boton_carousel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="372dp" />

        <Button
            android:id="@+id/imagenButton2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Boton_castelo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="372dp" />

        <Button
            android:id="@+id/imagenButton3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Boton_tuneles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="372dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>